--- a/slides/01-foundations.html
+++ b/slides/01-foundations.html
@@ -3,19 +3,28 @@
   <head>
     <title>01-foundations.knit</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Miles Ott" />
-    <meta name="date" content="2021-06-24" />
+    <meta name="author" content="Mine Dogucu" />
+    <meta name="date" content="2022-09-11" />
+    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="slide-style.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # <p>Teaching Bayesian Statistics at the Undergraduate Level</p>
 Bayesian Foundations
-## USCOTS workshop
-### Miles Ott
-### 2021-06-24
+]
+.subtitle[
+## ICOTS workshop
+]
+.author[
+### Mine Dogucu
+]
+.date[
+### 2022-09-11
+]
 
 ---
 
@@ -105,6 +114,7 @@ class: top
 --
 
 - Investigate the influence of different prior choices on your posterior
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -154,6 +164,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
