--- a/slides/03-regression.html
+++ b/slides/03-regression.html
@@ -4,19 +4,27 @@
     <title>03-regression.knit</title>
     <meta charset="utf-8" />
     <meta name="author" content="Mine Dogucu" />
-    <meta name="date" content="2021-06-24" />
-    <script src="libs/header-attrs-2.9/header-attrs.js"></script>
+    <meta name="date" content="2022-09-11" />
+    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link rel="stylesheet" href="slide-style.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # <p>Teaching Bayesian Statistics at the Undergraduate Level</p>
 Bayesian Regression and Classification
+]
+.subtitle[
 ## USCOTS workshop
+]
+.author[
 ### Mine Dogucu
-### 2021-06-24
+]
+.date[
+### 2022-09-11
+]
 
 ---
 
@@ -141,6 +149,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
