wrap up foundations

--- a/slides/01-foundations.html
+++ b/slides/01-foundations.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Mine Dogucu" />
     <meta name="date" content="2022-09-11" />
-    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link rel="stylesheet" href="slide-style.css" type="text/css" />
   </head>
   <body>
@@ -30,7 +30,7 @@ Bayesian Foundations
 
 
 
-class: top 
+class: middle 
 
 ## Bayesian Foundations Chapters
 
@@ -44,7 +44,7 @@ class: top
 
 ---
 
-class: top 
+class: middle 
 
 ## By the end of this section students will be able to:
 
@@ -56,7 +56,7 @@ class: top
 - Recognize and use common _Conjugate Families_
 ---
 
-class: top 
+class: middle 
 
 ## Thinking Like a Bayesian
 
@@ -67,7 +67,7 @@ style="width:865px;"&gt;]
 
 ---
 
-class: top
+class: middle
 
 ## Bechdel Test
 
@@ -76,7 +76,7 @@ style="width:665px; margin-top:20px; border: 3px solid whitesmoke; padding: 10px
 
 ---
 
-class: top
+class: middle
 
 ## Bechdel Test
 
@@ -90,21 +90,21 @@ style="width:565px;"&gt;]
 
 ---
 
-class: top
+class: middle
 
 ## Building a Prior Distribution: Bechdel Test
 
 --
 
-- What proportion of movies do you think pass the Bechdel test? (chat your answer)
+- What proportion of movies do you think pass the Bechdel test? 
 
 --
 
-- How sure are you? Choose a range of reasonable values. (chat your answer)
+- How sure are you? Choose a range of reasonable values. 
 
 --
 
-- __Breakout rooms__: &lt;a href = "https://github.com/bayes-rules/uscots-2021/blob/main/R/01-foundations-activity.html"&gt;01-foundations.html&lt;/a&gt;
+- __Breakout rooms__: &lt;a href = "https://bayes-rules-icots-2022.netlify.app/R/01-foundations-activity.html"&gt;01-foundations.html&lt;/a&gt;
 - Identify a Beta distribution to formalize your prior using functions from `bayesrules` package
 
 --
