update to icots

--- a/slides/02-posterior.html
+++ b/slides/02-posterior.html
@@ -3,9 +3,9 @@
   <head>
     <title>02-posterior.knit</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Alicia Johnson" />
-    <meta name="date" content="2021-06-24" />
-    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
+    <meta name="author" content="Mine Dogucu" />
+    <meta name="date" content="2022-09-11" />
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link rel="stylesheet" href="slide-style.css" type="text/css" />
   </head>
   <body>
@@ -17,13 +17,13 @@ class: center, middle, inverse, title-slide
 Posterior Simulation and Analysis
 ]
 .subtitle[
-## USCOTS workshop
+## ICOTS workshop
 ]
 .author[
-### Alicia Johnson
+### Mine Dogucu
 ]
 .date[
-### 2021-06-24
+### 2022-09-11
 ]
 
 ---
@@ -143,7 +143,7 @@ Now **PRETEND** that we weren't able to mathematically specify our posterior. In
 
 ---
 
-class: top
+class: middle
 
 
 # Activity goals
