--- a/slides/03-regression.html
+++ b/slides/03-regression.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Mine Dogucu" />
     <meta name="date" content="2022-09-11" />
-    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link rel="stylesheet" href="slide-style.css" type="text/css" />
   </head>
   <body>
@@ -17,7 +17,7 @@ class: center, middle, inverse, title-slide
 Bayesian Regression and Classification
 ]
 .subtitle[
-## USCOTS workshop
+## ICOTS workshop
 ]
 .author[
 ### Mine Dogucu
