--- a/slides/01-foundations.html
+++ b/slides/01-foundations.html
@@ -104,7 +104,7 @@ class: middle
 
 --
 
-- __Breakout rooms__: &lt;a href = "https://bayes-rules-icots-2022.netlify.app/R/01-foundations-activity.html"&gt;01-foundations.html&lt;/a&gt;
+- __With neighbors__: &lt;a href = "https://bayes-rules-icots-2022.netlify.app/R/01-foundations-activity.html"&gt;01-foundations.html&lt;/a&gt;
 - Identify a Beta distribution to formalize your prior using functions from `bayesrules` package
 
 --
